maven support in progress, skin for mhgen started