@@ -71,4 +71,178 @@
             <version>3.1.0.RELEASE</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
+                    <warName>${application.name}</warName>
+                    <outputDirectory>target/dist</outputDirectory>
+                    <webResources>
+                        <resource>
+                            <directory>src/main/properties</directory>
+                            <includes>
+                                <include>**/**</include>
+                            </includes>
+                            <filtering>false</filtering>
+                            <targetPath>WEB-INF/classes</targetPath>
+                        </resource>
+                        <resource>
+                            <directory>clients/${client}/</directory>
+                            <includes>
+                                <include>help/**</include>
+                            </includes>
+                        </resource>
+                        <resource>
+                            <directory>clients/${client}/</directory>
+                            <includes>
+                                <include>images/**</include>
+                            </includes>
+                        </resource>
+                        <resource>
+                            <directory>clients/${client}/</directory>
+                            <includes>
+                                <include>statics/**</include>
+                            </includes>
+                        </resource>
+                        <resource>
+                            <directory>clients/${client}/</directory>
+                            <includes>
+                                <include>styles/**</include>
+                            </includes>
+                        </resource>
+                        <resource>
+                            <directory>clients/${client}/</directory>
+                            <includes>
+                                <include>templates/*.vm</include>
+                            </includes>
+                            <targetPath>WEB-INF/classes</targetPath>
+                        </resource>
+                        <resource>
+                            <directory>clients/${client}/resources/properties</directory>
+                            <includes>
+                                <include>*.xml</include>
+                            </includes>
+                            <targetPath>WEB-INF/classes</targetPath>
+                        </resource>
+                        <resource>
+                            <directory>clients/${client}/resources/language/en</directory>
+                            <includes>
+                                <include>clientmessages.properties</include>
+                            </includes>
+                            <filtering>true</filtering>
+                            <targetPath>WEB-INF/classes</targetPath>
+                        </resource>
+                        <resource>
+                            <directory>src/main/webapp</directory>
+                            <includes>
+                                <include>**/*.properties</include>
+                            </includes>
+                            <filtering>true</filtering>
+                        </resource>
+                        <resource>
+                            <directory>src/main/webapp/META-INF</directory>
+                            <includes>
+                                <include>context.xml</include>
+                            </includes>
+                            <filtering>true</filtering>
+                            <targetPath>META-INF</targetPath>
+                        </resource>
+                    </webResources>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>yuicompressor-maven-plugin</artifactId>
+                <version>1.5.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compress</goal>
+                        </goals>
+                        <phase>compile</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <excludes>
+                        <exclude>**/*.min.js</exclude>
+                        <exclude>**/AJS.js</exclude>
+                        <exclude>**/jquery.color.js</exclude>
+                        <exclude>**/jquery.tablesorter.pager.js</exclude>
+                        <exclude>**/questionnaires.js</exclude>
+                        <exclude>**/functions.js</exclude>
+                        <exclude>**/popups.js</exclude>
+                    </excludes>
+                    <nosuffix>true</nosuffix>
+                    <force>true</force>
+                    <aggregations>
+                        <aggregation>
+                            <output>src/main/webapp/js/talentstudio.min.js</output>
+                            <inputDir>src/main/webapp/js</inputDir>
+                            <includes>
+                                <include>populationfunctions.js</include>
+                                <include>portfoliofunctions.js</include>
+                                <include>searchfunctions.js</include>
+                                <include>tabfunctions.js</include>
+                                <include>worklistfunctions.js</include>
+                                <include>attributes.js</include>
+                                <include>helpText.js</include>
+                                <include>messages.js</include>
+                                <include>objectives.js</include>
+                            </includes>
+                        </aggregation>
+                    </aggregations>
+                </configuration>
+            </plugin>
+            <plugin>
+                <!-- todo this plugin is not working!!-->
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <port>8093</port>
+                    <path>/talent-studio</path>
+                    <warSourceDirectory>
+                        ${project.build.directory}/${project.build.finalName}
+                    </warSourceDirectory>
+                    <!--<warDirectory>${project.build.directory}/talent-studio.war</warDirectory>-->
+                    <!--<finalName>talent-studio.war</finalName>-->
+                    <systemProperties>
+                        <org.apache.catalina.startup.ContextConfig.jarsToSkip>*
+                        </org.apache.catalina.startup.ContextConfig.jarsToSkip>
+                        <!-- work around .. see: https://issues.apache.org/jira/browse/MTOMCAT-281 -->
+                        <catalina.config>${project.baseUri}/target/tomcat/logs</catalina.config>
+                        <JAVA_OPTS>-Xms2048m -Xmx2048m -XX:+CMSClassUnloadingEnabled -XX:PermSize=2048m
+                            -XX:MaxPermSize=3072m
+                        </JAVA_OPTS>
+                    </systemProperties>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.oracle</groupId>
+                        <artifactId>ojdbc7</artifactId>
+                        <version>14.0.0</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>javax.mail</groupId>
+                        <artifactId>mail</artifactId>
+                        <version>1.4.7</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>javax.activation</groupId>
+                        <artifactId>activation</artifactId>
+                        <version>1.1.1</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
